methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:3: error: method run overrides nothing.
Note: the super classes of class MethodsPictureLarge contain the following, non final members named run:
def run(): Unit
override def run(taille: Int) {
             ^