methods.picture.MethodsPictureLarge.scala.code
var taille = 9

override def run(taille: Int) {
  for (ligne <- 1 to taille) {
    for (carr? <- 1 to taille) {
      faireV(Color.YELLOW)
      faireV(Color.RED)
      faireV(Color.BLUE)
      faireV(Color.GREEN)
      avance()
      avance()
      avance()
      avance()
      avance()
    }
    gauche()
    avance()
    avance()
    avance()
    avance()
    avance()
    droite()
  }
}

def faireV(c:Color) {
  avance()
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  droite()
  avance()
  gauche()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
}